--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,2 @@
 max_width = 79
-hard_tabs = false
-tab_spaces = 4
-newline_style = "Auto"
-use_small_heuristics = "Default"
+use_small_heuristics = "Max"
